--- a/rottenpotatoes/Gemfile
+++ b/rottenpotatoes/Gemfile
@@ -11,6 +11,9 @@ gem 'jquery-rails'
 gem 'haml'
 gem 'protected_attributes'
 
+gem 'bcrypt', '~> 3.1.7'
+
+
 group :development, :test do
   gem 'sqlite3', '~> 1.3.6'
   gem 'byebug'
