--- a/rottenpotatoes/Gemfile
+++ b/rottenpotatoes/Gemfile
@@ -13,6 +13,11 @@ gem 'protected_attributes'
 
 gem 'bcrypt', '~> 3.1.7'
 
+gem 'dotenv-rails'
+gem 'omniauth'
+gem 'omniauth-google-oauth2'
+gem 'omniauth-rails_csrf_protection'
+
 
 group :development, :test do
   gem 'sqlite3', '~> 1.3.6'
