--- a/rottenpotatoes/Gemfile
+++ b/rottenpotatoes/Gemfile
@@ -27,5 +27,6 @@ end
 group :production do
   gem 'pg'
 end
-gem 'omniauth'
-gem 'omniauth-facebook', '1.4.0'
+
+gem 'omniauth', '1.3.1'
+gem 'omniauth-facebook', '4.0.0'
